--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,31 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+django = "==3.2.9"
+psycopg2-binary = "==2.9.1"
+djangorestframework = "==3.12.4"
+django-filter = "*"
+drf-yasg = "*"
+pylint-django = "*"
+pytz = "==2021.3"
+sqlparse = "==0.4.2"
+asgiref = "==3.4.1"
+astroid = "==2.8.4"
+isort = "==5.10.1"
+lazy-object-proxy = "==1.6.0"
+mccabe = "==0.6.1"
+platformdirs = "==2.4.0"
+pylint = "==2.11.1"
+setuptools = "==58.5.3"
+toml = "==0.10.2"
+typing-extensions = "==3.10.0.2"
+wrapt = "==1.13.3"
+yapf = "==0.31.0"
 
 [dev-packages]
 pylint = "*"
 black = "*"
+autopep8 = "*"
 
 [requires]
 python_version = "3.8"
